K8S/booking-service-deployment.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  labels:
    app: booking-service
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: mhdmuflih/mock:booking-service 
        imagePullPolicy: Always
---

# service
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  type: NodePort
  selector:
    app: booking-service
  ports:
    - name: grpc
      protocol: TCP
      port: 50052  # Exposed gRPC port (externally accessible)
      targetPort: 50052  # Internal gRPC port (should be the same in the container)
    - name: server
      protocol: TCP
      port: 3000  # External port for your HTTP server
      targetPort: 3000  # Internal port your server is listening on
