K8S/chat-service-deployment.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  labels:
    app: chat-service
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
      - name: chat-service
        image: mhdmuflih/mock:chat-service  
        imagePullPolicy: Always
        ports:
          - containerPort: 6000  # HTTP server port
          - containerPort: 6060  # WebSocket server port
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  type: NodePort
  selector:
    app: chat-service
  ports:
    - name: http
      protocol: TCP
      port: 6000       # Expose HTTP server
      targetPort: 6000

    - name: websocket
      protocol: TCP
      port: 6060       # Expose WebSocket server
      targetPort: 6060
